-Fix the styles of the carousel -Update the selectedGame method -Make sure the header is visible

--- a/ahgl/static/js/app/app/styles/carousel.less
+++ b/ahgl/static/js/app/app/styles/carousel.less
@@ -1,10 +1,11 @@
 .carousel {
-    height: 200px;
-    top: -15px;
+    height: 340px;
+    top: -27px;
     position: relative;
+
     img {
         display: block;
-        height: 200px;
+        height: 400px;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
@@ -25,17 +26,17 @@
     }
     .mask {
         background-image: -moz-linear-gradient(top, 
-            rgba(0,0,0,0.5) 0%, 
-            rgba(0,0,0,0.6) 20%,
+            rgba(0,0,0,0.5) 20%, 
+            rgba(0,0,0,0.8) 40%,
             rgba(0,0,0,0.9) 100%);
         background-image: -webkit-linear-gradient(top, 
-            rgba(0,0,0,0.5) 0%, 
-            rgba(0,0,0,0.6) 20%,
+            rgba(0,0,0,0.5) 20%, 
+            rgba(0,0,0,0.8) 40%,
             rgba(0,0,0,0.9) 100%);
         width: 100%;
-        height: 75px;
+        height: 130px;
         position: absolute;
-        top: 125px;
+        top: 270px;
     }
     .message {
         position: absolute;
@@ -43,10 +44,12 @@
         color: white;
         width: 100%;
         height: 75px;
-        top: 135px;
+        top: 315px;
         text-align: center;
         .font-display;
-        font-size: 18px;
+        font-size: 28px;
+        letter-spacing: 2px;
+        font-weight: 700;
         text-transform: uppercase;
 
         a {
@@ -72,7 +75,7 @@
         .rn-carousel-control.rn-carousel-control-next {
             width: 30px;
             height: 50px;
-            margin-top: -50px;
+            margin-top: -90px;
             background: url('../images/carousel-right-arrow.png');
             &:before {
                 content: '';
@@ -81,7 +84,7 @@
         .rn-carousel-control.rn-carousel-control-prev {
             width: 30px;
             height: 50px;
-            margin-top: -50px;
+            margin-top: -90px;
             background: url('../images/carousel-left-arrow.png');
             &:before {
                 content: '';
