--- a/ahgl/static/js/app/app/styles/commonElements.less
+++ b/ahgl/static/js/app/app/styles/commonElements.less
@@ -1,11 +1,10 @@
 .section {
-    
+    z-index: 10;
     width: 1025px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
     .header {
-
         background-image: url('../images/header.png');
         background-repeat: no-repeat;
 
